# md5service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg
env/: docker.env  example.env
md5service/: app.py  calculator.py  dto.py  handlers.py  mail.py  utils.py
tests/: conftest.py  md5testfile.txt  test_check.py  test_md5service.py  test_submit.py
