[tool.poetry]
name = "md5service"
version = "0.1.0"
description = ""
authors = ["Dmitry Rodionov <captfrozenberg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.5"
pydantic = {version = "^0.29.0",extras = ["email"]}
aioredis = "^1.2"
python-dotenv = "^0.10.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
